# db-project

./: .env.example  .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml  erd.drawio  test.http
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  schema.sql  schema_eng.sql  service.py  views.py
backend/app/templates/: 404.html  add_receipt.html  admin.html  admin_dashboard.html  base.html  categories.html  category_receipts.html  error.html  global_macros.html  home.html  login.html  receipt.html  register.html  success.html  success_logout.html  update_receipt.html
backend/app/views/: admin.py  categories.py  general.py  ingredients.py  receipts.py  service.py  units.py
backend/scripts/: start.prod.sh  start.sh
nginx/: Dockerfile  nginx.conf
